[package]
name = "audiokit"
version = "0.1.2"
authors = ["Adam Nemecek <adamnemecek@gmail.com>"]
edition = "2018"
description = "Audio processing framework"
homepage = "https://audiokit.io"
repository = "https://github.com/adamnemecek/audiokit-rs"
readme = "README.md"
keywords = ["audio", "macos"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
